<resources>

    // Application name
    <string name="app_name">Ticket app</string>

    // main menu buttons
    <string name="Upload_button">Sell your ticket</string>
    <string name="Search_button">Search</string>
    <string name="Request_button">Request</string>
    <string name="log_in">Log In</string>
    <string name="search_main_menu">Search Ticket</string>


    // menu options
    <string name="action_user">Icon</string>
    <string name="one_choice">One</string>
    <string name="two_choices">Two</string>
    <string name="description">Description</string>
    <string name="log_in_in_selection">Log In</string>
    <string name="sign_up_in_selection">Sign Up</string>

    // action bar strings
    <string name="log_in_user">Log in</string>

    // sign up all options
    <string name="upload_photo">upload photo</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="repeat_password">Repeat your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="repeat_email">Repeat your email</string>


    //login
    <string name="label_error">Here is your label</string>
    <string name="lable_error_text">k</string>


    // example list of posts
    <string-array name="list_of_posts_array">
        <item>test1</item>
        <item>test2</item>
        <item>test3</item>
        <item>test4</item>
        <item>test5</item>
    </string-array>

    //Sell your ticket
    <string name="price_ticket">Price</string>
    <string name="description_for_selling_ticket">Description</string>
    <string name="ticket_name">Ticket Name</string>
    <string name="auction_bid">Auction/Bid</string>
    <string name="buy_it_now">Buy it now</string>
    <string name="upload_post">Upload</string>
    <string name="location">Location</string>
    <string name="select_date">Select starting date</string>
    <string name="select_category">Select Category:</string>

    <string-array name="category">
        <item>Events</item>
        <item>Sports</item>
        <item>Flights</item>
    </string-array>

    <string-array name="flighs_destinations">
        <item>Choose a destination</item>
        <item>CPH - Copenhagen Airport</item>
        <item>DUS - Düsseldorf Airport</item>
        <item>LAX - Los Angeles International Airport</item>
        <item>DEL - Indira Gandhi International Airport</item>
        <item>ISB - Benazir Bhutto International Airport</item>
        <item>EIN - Eindhoven Airport</item>
        <item>AMS - Amsterdam Airport Schiphol</item>
        <item>FRA - Frankfurt Airport</item>
    </string-array>

    //Radio buttons in main menu
    <string name="flight_choice_3">Flights</string>
    <string name="sports_choice_2">Sports</string>
    <string name="event_choice_1">Events</string>


    //items for the menu
    <string name="search_icon">Search Icon</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="account_settings">Account settings</string>

    //TicketDetails Activity
    <string name="price_for_detailsActivity">Price: "" </string>
    <string name="description_for_detailsActivity">Description: "" </string>
    <string name="email_for_detailsActivity">User Email: "" </string>
    <string name="owner_for_detailsActivity">Owner: ""  </string>
    <string name="fromOrigin">From: ""  </string>
    <string name="toOrigin">To: ""  </string>

    //nav_header
    <string name="my_header_title">My header title</string>

    //This is for the side menu
    <string name="open">Open</string>
    <string name="close">Close</string>

    //request page
    <string name="request_button_in_request_page">Request</string>
    <string name="Request_event_name">Wrtie the ticket name. We will send you a notification, when your ticket is available.</string>

    //Profile Activity
    <string name="log_out">Log Out</string>

</resources>
