<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/upload_photo_button"
        android:layout_marginTop="29dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/enter_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/enter_your_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/repeat_your_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/repeat_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/enter_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/repeat_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/repeat_password"
                android:inputType="textPassword" />




        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/upload_photo_button"
        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/upload_photo"
        app:srcCompat="@mipmap/ic_user_photo_round" />

    <Button
        android:id="@+id/sign_up_button_in_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/upload_photo_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:onClick="signupBt"
        android:background="@drawable/ripple"
        android:text="@string/sign_up_in_selection" />

    <TextView
        android:id="@+id/signupError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_up_button_in_sign_up"
        android:layout_marginEnd="25dp"
        android:layout_toStartOf="@+id/upload_photo_button"
        android:text="" />
</RelativeLayout>