<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gvida.ticketapp2.MainMenuActivity">

    <Button
        android:id="@+id/searching_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/Search_button" />

    <Button
        android:id="@+id/upload_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/searching_button"
        android:layout_marginTop="13dp"
        android:text="@string/Upload_button" />

    <Button
        android:id="@+id/request_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upload_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/Request_button" />

</RelativeLayout>
