<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/bird_heading_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owner_for_detailsActivity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/owner"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_for_detailsActivity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_txt"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_for_detailsActivity" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/price_txt"
        android:text="" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_for_detailsActivity" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description_txt"
        android:text="" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



        <EditText
            android:id="@+id/CommentBox"
            android:layout_height="wrap_content"
            android:hint="Write a comment to the seller:"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="fill_parent">
        </EditText>

        <Button
            android:text="send"
            android:id="@+id/SendCommentbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="SendCommentButton">
        </Button>



    <ListView
        android:id="@+id/list_view_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>





</LinearLayout>