<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">



        <EditText
            android:id="@+id/log_in_name"
            android:layout_width="match_parent"
            android:text="muheb@hotmail.com"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/log_in_password"
            android:layout_width="match_parent"
            android:text="123456"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/Lable"
            android:textColor="#ff0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:text=" "/>




    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:onClick="loginBt"
        android:text="@string/log_in_user" />

    <Button
        android:id="@+id/btnTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:onClick="loginTest"
        android:text="test"
        />

    <TextView
        android:id="@+id/lbltest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:text="Test"/>





</LinearLayout>